# MusicDownloaderBot

./: .env.example  README.md  bot.py  command_utils.py  config.py  pyproject.toml  queue_manager.py  requirements.txt  voice_player.py
downloaders/: youtube.py
